# playwright-visual-qa

./: .gitignore  README.md  README.zh-CN.md  base_qa.py  pyproject.toml
universal_qa/: __init__.py  cli.py  config.py  reporter.py  runner.py  snapshotter.py
